[package]
name = "usync"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
flume = "0.11.1"
rand = "0.9.2"
raptorq = "2.0.0"
base64 = "0.21" 
ed25519-dalek = "2"
bytes = "1.10.1"
zerocopy = { version = "0.8.26", features = ["derive"] }
toml = "0.9.4"
crc = "3.3.0"
clap = "4.5.42"
serde = { version = "1.0", features = ["derive"] }
