[package]
name = "usync"
version = "0.1.0"
edition = "2024"
description = "Using Raptorq code to transmit large file over UDP through unreliable network."
license = "MIT"
authors = ["Lethe Lee <lichenghao_thu@foxmail.com>"]


[dev-dependencies]
tempfile = "3.20.0"

[dependencies]
blake3 = "1.8.2"
flume = "0.11.1"
rand = "0.9.2"
raptorq = { git = "https://github.com/Lethe10137/raptorq.git", branch = "master" }
base64 = "0.21"
ed25519-dalek = "2"
bytes = "1.10.1"
zerocopy = { version = "0.8.26", features = ["derive"] }
toml = "0.9.4"
crc = "3.3.0"
num_enum = "0.7.4"
hex = "0.4.3"
log = "0.4.27"
tap = "1.0.1"
memmap2 = "0.9.7"
page_size = "0.6.0"
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
directories = "6.0.0"
anyhow = "1.0.98"
owo-colors = "4.2.2"
humansize = "2.1.3"
async-trait = "0.1.88"
tokio = { version = "1.47.1", features = ["full"] }
mio = { version = "1.0.4", features = ["net"] }
socket2 = { version = "0.6.0", features = ["all"] }
